# aam-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
examples/: advanced.rs  advanced_base.aam  advanced_child.aam  builder.rs  config_base.aam  config_child.aam  config_inheritance.rs  custom_types.rs  derive.rs  derive_base.aam  derive_child.aam  schema_in_schema.rs  standard.aam  standard.rs  standard_stress.rs
src/: aam-docs.code-workspace  aaml.rs  builder.rs  error.rs  found_value.rs  lib.rs  test.rs  test_core.rs  test_derive.rs  test_imports.rs
src/aaml/: lookup.rs  mod.rs  parsing.rs  serialize.rs  types_registry.rs  validation.rs
src/commands/: derive.rs  import.rs  mod.rs  schema.rs  typecm.rs
src/types/: list.rs  math.rs  mod.rs  primitive_type.rs  time.rs
tests/: test_core.rs  test_derive.rs  test_imports.rs  test_parsing.rs  test_serde.rs  type_validation_tests.rs
