[package]
name = "aam-rs"
version = "1.0.3"
description = "A Rust implementation of the Abstract Alias Mapping (AAM) framework for aliasing and maping aam files."
license = "MIT"
repository = "https://github.com/INiNiDS/aam-rs/"
edition = "2024"
readme = "README.md"
categories = [
    "data-structures",
    "parsing",
    "config",
]

[dependencies]
ahash = {version = "0.8", optional = true}

[features]
default = []
perf-hash = ["ahash"]