[package]
name = "aam-rs"
version = "1.1.0"
description = "A Rust implementation of the Abstract Alias Mapping (AAM) framework for aliasing and maping aam files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/INiNiDS/aam-rs/"
edition = "2024"
readme = "README.md"
categories = [
    "data-structures",
    "parsing",
    "config",
]

[dependencies]
ahash = {version = "0.8.12", optional = true}
serde = {version = "1.0.228", features = ["derive"], optional = true}

[features]
default = []
perf-hash = ["ahash"]

[[example]]
name = "standard"

[[example]]
name = "standard_stress"

[[example]]
name = "derive"

[[example]]
name = "custom_types"

[[example]]
name = "advanced"

[[example]]
name = "schema_in_schema"

[[example]]
name = "config_inheritance"

[[example]]
name = "builder"

[dev-dependencies]
serde_json = "1.0.149"
